# safecpp

./: CMakeLists.txt
examples/: CMakeLists.txt  bounds.cpp  must_init.cpp  safe_int.cpp
safe/: array.h  deque.h  must_init.h  safe_int.h  vector.h
